fixed interests/edu spacing for mobile.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -14,11 +14,11 @@ p {
     margin-bottom: 50px;
   }
   .col-md-5 { // interests
-    flex-basis: 38%;
-    max-width: 38%;
+    // flex-basis: 38%;
+    // max-width: 38%;
     .ul-interests {
       list-style: circle;
-      margin-left: 30px;
+      margin-left: 38px;
       line-height: 2.2;
     }
     i {
@@ -26,12 +26,20 @@ p {
     }
   }
   .col-md-7 { // education
-    flex-basis: 62%;
-    max-width: 62%;
     .ul-edu {
       text-align: left;
       margin-left: 45px;
       text-align: left;
+    }
+  }
+  @media (min-width: 768px) { // for medium to small screens
+    .col-md-5 { // interests
+      flex-basis: 38%;
+      max-width: 38%;
+    }
+    .col-md-7 { // education
+      flex: 0 0 62%;
+      max-width: 62%;
     }
   }
 }
